--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                     <td>GitHub:</td>
                     <td><a href="https://github.com/">Your Name</a></td>
                 </tr>
+                <tr>
+                    <td>Email</td>
+                    <td><a href="https://gmail.com/" >your email</a></td>
+                </tr>
             </table>
         </div>
     </div>
